--- a/requirements.txt
+++ b/requirements.txt
@@ -4,37 +4,154 @@
 #
 #    pip-compile
 #
+aiohttp==3.9.1
+    # via web3
+aiosignal==1.3.1
+    # via aiohttp
 annotated-types==0.6.0
     # via pydantic
 anyio==4.2.0
     # via starlette
+async-timeout==4.0.3
+    # via aiohttp
+attrs==23.2.0
+    # via
+    #   aiohttp
+    #   jsonschema
+    #   referencing
+bitarray==2.9.2
+    # via eth-account
+certifi==2023.11.17
+    # via requests
+charset-normalizer==3.3.2
+    # via requests
 click==8.1.7
     # via uvicorn
+cytoolz==0.12.2
+    # via eth-utils
+eth-abi==4.2.1
+    # via
+    #   eth-account
+    #   web3
+eth-account==0.10.0
+    # via web3
+eth-hash[pycryptodome]==0.5.2
+    # via
+    #   eth-utils
+    #   web3
+eth-keyfile==0.7.0
+    # via eth-account
+eth-keys==0.4.0
+    # via
+    #   eth-account
+    #   eth-keyfile
+eth-rlp==1.0.0
+    # via eth-account
+eth-typing==3.5.2
+    # via
+    #   eth-abi
+    #   eth-keys
+    #   eth-utils
+    #   web3
+eth-utils==2.3.1
+    # via
+    #   eth-abi
+    #   eth-account
+    #   eth-keyfile
+    #   eth-keys
+    #   eth-rlp
+    #   rlp
+    #   web3
 exceptiongroup==1.2.0
     # via anyio
 fastapi==0.108.0
     # via -r requirements.in
+frozenlist==1.4.1
+    # via
+    #   aiohttp
+    #   aiosignal
 h11==0.14.0
     # via uvicorn
+hexbytes==0.3.1
+    # via
+    #   eth-account
+    #   eth-rlp
+    #   web3
 idna==3.6
-    # via anyio
+    # via
+    #   anyio
+    #   requests
+    #   yarl
+jsonschema==4.20.0
+    # via web3
+jsonschema-specifications==2023.12.1
+    # via jsonschema
+lru-dict==1.2.0
+    # via web3
+multidict==6.0.4
+    # via
+    #   aiohttp
+    #   yarl
+parsimonious==0.9.0
+    # via eth-abi
+protobuf==4.25.1
+    # via web3
+pycryptodome==3.19.1
+    # via
+    #   eth-hash
+    #   eth-keyfile
 pydantic==2.5.3
     # via
     #   -r requirements.in
     #   fastapi
+    #   pydantic-settings
 pydantic-core==2.14.6
     # via pydantic
+pydantic-settings==2.1.0
+    # via -r requirements.in
+python-dotenv==1.0.0
+    # via pydantic-settings
+pyunormalize==15.1.0
+    # via web3
+referencing==0.32.1
+    # via
+    #   jsonschema
+    #   jsonschema-specifications
+regex==2023.12.25
+    # via parsimonious
+requests==2.31.0
+    # via web3
+rlp==4.0.0
+    # via
+    #   eth-account
+    #   eth-rlp
+rpds-py==0.16.2
+    # via
+    #   jsonschema
+    #   referencing
 sniffio==1.3.0
     # via anyio
 starlette==0.32.0.post1
     # via fastapi
+toolz==0.12.0
+    # via cytoolz
 typing-extensions==4.9.0
     # via
     #   anyio
+    #   eth-typing
     #   fastapi
     #   pydantic
     #   pydantic-core
     #   starlette
     #   uvicorn
+    #   web3
+urllib3==2.1.0
+    # via requests
 uvicorn==0.25.0
     # via -r requirements.in
+web3==6.13.0
+    # via -r requirements.in
+websockets==12.0
+    # via web3
+yarl==1.9.4
+    # via aiohttp
