--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -28,7 +28,7 @@ jobs:
         id: build-image
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          ECR_REPOSITORY: ${{ variables.REPO_NAME }}
+          ECR_REPOSITORY: ${{ vars.REPO_NAME }}
           IMAGE_TAG: latest
         run: |
           # Build a docker container and push it to ECR 
