--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,9 @@ aiosignal==1.3.1
 annotated-types==0.6.0
     # via pydantic
 anyio==4.2.0
-    # via starlette
+    # via
+    #   httpx
+    #   starlette
 async-timeout==4.0.3
     # via aiohttp
 attrs==23.2.0
@@ -22,7 +24,10 @@ attrs==23.2.0
 bitarray==2.9.2
     # via eth-account
 certifi==2023.11.17
-    # via requests
+    # via
+    #   httpcore
+    #   httpx
+    #   requests
 charset-normalizer==3.3.2
     # via requests
 click==8.1.7
@@ -63,7 +68,9 @@ eth-utils==2.3.1
     #   rlp
     #   web3
 exceptiongroup==1.2.0
-    # via anyio
+    # via
+    #   anyio
+    #   pytest
 fastapi==0.108.0
     # via -r requirements.in
 frozenlist==1.4.1
@@ -71,17 +78,26 @@ frozenlist==1.4.1
     #   aiohttp
     #   aiosignal
 h11==0.14.0
-    # via uvicorn
+    # via
+    #   httpcore
+    #   uvicorn
 hexbytes==0.3.1
     # via
     #   eth-account
     #   eth-rlp
     #   web3
+httpcore==1.0.2
+    # via httpx
+httpx==0.26.0
+    # via -r requirements.in
 idna==3.6
     # via
     #   anyio
+    #   httpx
     #   requests
     #   yarl
+iniconfig==2.0.0
+    # via pytest
 jsonschema==4.20.0
     # via web3
 jsonschema-specifications==2023.12.1
@@ -92,8 +108,12 @@ multidict==6.0.4
     # via
     #   aiohttp
     #   yarl
+packaging==23.2
+    # via pytest
 parsimonious==0.9.0
     # via eth-abi
+pluggy==1.3.0
+    # via pytest
 protobuf==4.25.1
     # via web3
 pycryptodome==3.19.1
@@ -108,6 +128,8 @@ pydantic==2.5.3
 pydantic-core==2.14.6
     # via pydantic
 pydantic-settings==2.1.0
+    # via -r requirements.in
+pytest==7.4.4
     # via -r requirements.in
 python-dotenv==1.0.0
     # via pydantic-settings
@@ -130,9 +152,13 @@ rpds-py==0.16.2
     #   jsonschema
     #   referencing
 sniffio==1.3.0
-    # via anyio
+    # via
+    #   anyio
+    #   httpx
 starlette==0.32.0.post1
     # via fastapi
+tomli==2.0.1
+    # via pytest
 toolz==0.12.0
     # via cytoolz
 typing-extensions==4.9.0
