--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,3 +13,16 @@ services:
     volumes:
       - ./app:/src/app
     command: ["--reload"]
+
+  test:
+    image: block_explorer
+    container_name: block_explorer_test
+    env_file: .env.test
+    build:
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - 8000:8000
+    volumes:
+      - ./app:/src/app
+    entrypoint: ["pytest"]
