--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -36,3 +36,7 @@ jobs:
           echo "Pushing image to ECR..."
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
           echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
+
+      - name: Apply Terraform
+        id: tf-apply
+        run: cd terraform && make apply
