--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -1,4 +1,4 @@
-'on':
+"on":
   push:
     branches:
       - main
@@ -10,15 +10,18 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
+
       - name: Login to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
+
       - name: Build, tag, and push the image to Amazon ECR
         id: build-image
         env:
@@ -31,12 +34,18 @@ jobs:
           echo "Pushing image to ECR..."
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
           echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
+
       - uses: hashicorp/setup-terraform@v3
         with:
           terraform_version: ~1.5.0
+
       - name: Deploy
         id: deploy
         run: make deploy
+
       - name: Write Summary
         id: summary
-        run: echo ${{ steps.deploy.outputs.stdout }} >> $GITHUB_STEP_SUMMARY
+        run: |
+          echo \`\`\`\n
+          ${{ steps.deploy.outputs.stdout }}
+          \`\`\` >> $GITHUB_STEP_SUMMARY
