--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -52,5 +52,4 @@ jobs:
         run: |
           echo '## Terraform Output' >> $GITHUB_STEP_SUMMARY
           echo '```' >> $GITHUB_STEP_SUMMARY
-          echo '${{ steps.tf-output.outputs.stdout }}' >> $GITHUB_STEP_SUMMARY
-          echo '```' >> $GITHUB_STEP_SUMMARY
+          echo '${{ steps.tf-output.outputs.stdout }}```' >> $GITHUB_STEP_SUMMARY
